Added some stuff

--- a/checkout.html
+++ b/checkout.html
@@ -208,7 +208,12 @@
             
             <br>
             <label for="address">Country:</label>
-            <input id="address" class="form-control input-group-lg reg_name" type="text" name="address" title="Enter address" placeholder="Country"/>
+            <br>
+        
+            <select class = "form-control">
+                <option value="Canada" title="Canada">Canada</option>
+                <option value="United States" title="United States">United States</option>
+            </select>
             <hr>
             <br>
             <h4>Shipping Options</h4>
