--- a/index.html
+++ b/index.html
@@ -156,6 +156,9 @@
                 <br />
         </div>
         <!-- /.row -->
+
+
+    </div>
         <div class="row">
             <div class="col-md-3">
                 <div>
@@ -276,12 +279,12 @@
                 <div class="row">
                     <div class="col-md-4 text-center col-sm-6 col-xs-6">
                         <div id = "book1" class="thumbnail product-box-fluid">
-                            <img id="book1img" src="assets/ItemSlider/images/gameofthronesboxset.jpg" height = "500px" width ="150px"/>
+                            <img id="book1img" src="assets/ItemSlider/images/5secondrule.jpg" height = "250px" width ="150px"/>
                             <div class="caption">
-                                <h3><a id="book1name" href="bookinfo.html">Game of Thrones 5 Book Box Set</a></h3>
-                                <p id="book1author">Author : <strong>George R.R. Martin</strong>  </p>
-                                <p id="book1price">Price : <strong>$45.99</strong>  </p>
-                                <p><a href="" class="btn btn-success" role="button" onclick="addToCart()">Add To Cart</a> <a href="bookinfo.html" class="btn btn-primary" role="button">See Details</a></p>
+                                <h3><a id="book1name" href="bookinfo.html">The 5 Second Rule</a></h3>
+                                <p id="book1author">Author : <strong>Mel Robbins</strong>  </p>
+                                <p id="book1price">Price : <strong>$9.99</strong>  </p>
+                                <p><a href="#" class="btn btn-success" role="button" onclick="addToCart()">Add To Cart</a> <a href="bookinfo.html" class="btn btn-primary" role="button">See Details</a></p>
                             </div>
                         </div>
                     </div>
